# git-post-receive

./: .gitignore  README.md  cabal.project  overlay.nix  shell.nix
git-post-receive-aeson/: git-post-receive-aeson.cabal
git-post-receive-aeson/src/Git/PostReceive/: Aeson.hs
git-post-receive-cat/: Main.hs  README.md  git-post-receive-cat.cabal
git-post-receive-cereal/: git-post-receive-cereal.cabal
git-post-receive-cereal/src/Git/PostReceive/: Serialize.hs
git-post-receive-exec/: Main.hs  README.md  git-post-receive-exec.cabal
git-post-receive-filter/: git-post-receive-filter.cabal
git-post-receive-filter/src/Git/PostReceive/: Filter.hs
git-post-receive-hook/: git-post-receive-hook.cabal
git-post-receive-hook/src/Git/: PostReceive.hs
git-post-receive-pretty/: git-post-receive-pretty.cabal
git-post-receive-pretty/src/Git/PostReceive/: Pretty.hs
git-post-receive-push/: Main.hs  README.md  git-post-receive-push.cabal
git-post-receive-types/: git-post-receive-types.cabal
git-post-receive-types/src/Git/PostReceive/: Types.hs
git-post-receive-zre/: Main.hs  README.md  git-post-receive-zre.cabal
git-post-receive-zre/src/Git/PostReceive/: ZRE.hs
git-post-receive-zre2irc/: Main.hs  README.md  git-post-receive-zre2irc.cabal
