name:           git-post-receive-cat
version:        0.1.0.0
description:    Cat git post-receive events to console
homepage:       https://github.com/sorki/git-post-receive#readme
bug-reports:    https://github.com/sorki/git-post-receive/issues
author:         Richard Marko
maintainer:     srk@48.io
copyright:      2019 Richard Marko
license:        BSD3
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/sorki/git-post-receive

executable git-post-receive-cat
  main-is: Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , bytestring
    , optparse-applicative
    , text
    , git-post-receive-types
    , git-post-receive-filter
    , git-post-receive-pretty
    , git-post-receive-zre
    , zre
  default-language: Haskell2010
