name:                git-post-receive-filter
version:             0.1.0.0
synopsis:            Batch and commit filtering
description:         Filtering utilities and optparse-applicative parser for filters
homepage:            https://github.com/sorki/git-post-receive
license:             BSD3
author:              Richard Marko
maintainer:          srk@48.io
copyright:           2020 Richard Marko
category:            Networking
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Git.PostReceive.Filter
  build-depends:       base >= 4.7 && < 5
                     , optparse-applicative
                     , regex-posix
                     , text
                     , git-post-receive-types
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sorki/git-post-receive
