name:           git-post-receive-hook
version:        0.1.0.0
description:    Git Post receive implementation
homepage:       https://github.com/sorki/git-post-receive#readme
bug-reports:    https://github.com/sorki/git-post-receive/issues
author:         Richard Marko
maintainer:     srk@48.io
copyright:      2019 Richard Marko
license:        BSD3
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/sorki/git-post-receive

library
  exposed-modules:
      Git.PostReceive
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , bytestring
    , cereal
    , text
    , git
    , foldl
    , turtle
    , git-post-receive-types
  default-language: Haskell2010
