name:           git-post-receive-zre2irc
version:        0.1.0.0
description:    Git Post receive ZRE to I2C bridge
homepage:       https://github.com/sorki/git-post-receive#readme
bug-reports:    https://github.com/sorki/git-post-receive/issues
author:         Richard Marko
maintainer:     srk@48.io
copyright:      2019 Richard Marko
license:        BSD3
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/sorki/git-post-receive

executable git-post-receive-zre2irc
  main-is: Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , bytestring
    , text
    , time
    , irc-colors
    , ircbridge-types
    , ircbridge-cereal
    , optparse-applicative
    , zre
    , git-post-receive-types
    , git-post-receive-zre
  default-language: Haskell2010
